--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+    <header>
+        <h1>Lorem ipsum dolor sit.</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum dolore quia labore veritatis non, amet vel
+            blanditiis iusto necessitatibus minima consequuntur tempora dolor rem error corrupti debitis minus
+            exercitationem. Saepe!</p>
+    </header>
 
 </body>
 
