--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             blanditiis iusto necessitatibus minima consequuntur tempora dolor rem error corrupti debitis minus
             exercitationem. Saepe!</p>
     </header>
+    <main>
+        <section>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing el</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio esse assumenda repellendus asperiores iste impedit eligendi eaque quasi quo? Numquam, velit?</p>
+        </section>
+    </main>
 
 </body>
 
